fix header on small screens

--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -184,7 +184,8 @@
 			line-height: 2.75em;
 
 			.logo {
-				padding: 0 1em;
+				padding: 0.5em 1em;
+				line-height: 1.25em;
 			}
 
 			nav {
